Add release packaging flow and initial skills module scaffolding
- Add `.tasque/.gitignore` for local state/cache/lock/snapshots
- Add `.tasque/config.json` with schema version and snapshot config
- Add sample `.tasque/events.jsonl` with event history
- Add `release` script and `scripts/release.ts` for
  build+artifact+checksum
- Update `README.md` and `LEARNINGS.md` with release instructions
- Update `package.json` scripts for release
- Fix state cache replay logic in `src/app/state.ts`
- Scaffold `src/skills/` with types and stub operation entrypoint

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "bun run src/main.ts",
     "build": "bun build src/main.ts --compile --outfile dist/tsq",
+    "release": "bun run scripts/release.ts",
     "typecheck": "bunx tsc --noEmit",
     "lint": "bunx @biomejs/biome check .",
     "fmt": "bunx @biomejs/biome format --write .",
