Add typed event payloads and runtime validation
- Introduce typed payload interfaces for each event type in types.ts
- Add EventPayloadMap and TypedEventRecord discriminated union
- Update projector and repair to use typed payloads
- Add runtime payload validation in store/events.ts for required fields
- Refactor CLI command modules for modularity and typed options
- Add helpers.ts for test utilities and refactor tests to use it
- Add tests/types.event-payloads.test.ts for compile-time and runtime
  checks
- Update domain/validate to treat missing blockers as blocking
- Update domain/ids to use child_counters for nextChildId
- Add app/storage.ts as consolidated storage adapter
- Update CLI program to use modular command registration
- Add/expand tests for snapshots, event validation, and helpers
- Update biome.json to warn on explicit any
- Update README and LEARNINGS for CLI flag rename
- Update skills/index.ts managed marker check logic
- Minor fixes and improvements across CLI and domain

--- a/biome.json
+++ b/biome.json
@@ -14,11 +14,19 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noExplicitAny": "off"
+        "noExplicitAny": "warn"
       }
     }
   },
   "organizeImports": {
     "enabled": true
-  }
+  },
+  "overrides": [
+    {
+      "include": ["**/*.jsonl"],
+      "formatter": {
+        "enabled": false
+      }
+    }
+  ]
 }
