Add parallel test runner and improve test CLI resolution
- Add scripts/test-parallel.ts for concurrent test execution
- Add test:fast script for parallel test runs
- Enhance helpers.ts to resolve CLI command (compiled or source)
- Update tests to use new cliCmd helper
- Allow lock timeout override via TSQ_LOCK_TIMEOUT_MS
- Minor formatting and import cleanups in tests and source

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "typecheck": "bunx tsc --noEmit",
     "lint": "bunx @biomejs/biome check .",
     "fmt": "bunx @biomejs/biome format --write .",
-    "test": "bun test",
-    "doctor": "bun run typecheck && bun run fmt && bun run lint && bun test"
+    "test": "bun run build && bun test",
+    "test:fast": "bun run build && bun run scripts/test-parallel.ts",
+    "doctor": "bun run typecheck && bun run fmt && bun run lint && bun run build && bun test"
   },
   "dependencies": {
     "commander": "^14.0.2",
