Add release automation scripts and workflows for versioning
- Add `version:bump` and `release:verify-version` scripts for
  semver/schema
  management and CI tag/version validation
- Add `release-from-package.yml` workflow for manual release from
  package.json
- Update release workflows to enforce tag/version sync
- Document release flow in `docs/releasing.md`
- Update tests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
 
       - run: bun install --frozen-lockfile
 
+      - name: Verify release tag matches package.json version
+        run: bun run release:verify-version -- --tag "${{ github.event.release.tag_name }}"
+
       - run: bun run doctor
 
       - run: bun run release
