--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,23 @@ jobs:
 
       - run: bun install --frozen-lockfile
 
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+
+      - name: Rust format check
+        run: cargo fmt --check
+        working-directory: src-rust
+
+      - name: Rust lint
+        run: cargo clippy --all-targets --all-features -- -D warnings
+        working-directory: src-rust
+
+      - name: Rust tests
+        run: cargo test --all-targets --all-features
+        working-directory: src-rust
+
       - name: Verify release tag matches package.json version
         run: bun run release:verify-version -- --tag "${{ github.event.release.tag_name }}"
 
