workflow fixes Format package.json fields for consistency

--- a/npm/platforms/linux-x64-gnu/package.json
+++ b/npm/platforms/linux-x64-gnu/package.json
@@ -5,12 +5,20 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BumpyClock/tasque.git"
+    "url": "git+https://github.com/BumpyClock/tasque.git"
   },
-  "os": ["linux"],
-  "cpu": ["x64"],
-  "libc": ["glibc"],
-  "files": ["tsq"],
+  "os": [
+    "linux"
+  ],
+  "cpu": [
+    "x64"
+  ],
+  "libc": [
+    "glibc"
+  ],
+  "files": [
+    "tsq"
+  ],
   "publishConfig": {
     "access": "public",
     "provenance": true
