--- a/npm/package.json
+++ b/npm/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BumpyClock/tasque.git"
+    "url": "git+https://github.com/BumpyClock/tasque.git"
   },
   "bin": {
     "tsq": "bin/tsq.js"
