--- a/npm/platforms/darwin-arm64/package.json
+++ b/npm/platforms/darwin-arm64/package.json
@@ -5,11 +5,17 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BumpyClock/tasque.git"
+    "url": "git+https://github.com/BumpyClock/tasque.git"
   },
-  "os": ["darwin"],
-  "cpu": ["arm64"],
-  "files": ["tsq"],
+  "os": [
+    "darwin"
+  ],
+  "cpu": [
+    "arm64"
+  ],
+  "files": [
+    "tsq"
+  ],
   "publishConfig": {
     "access": "public",
     "provenance": true
