--- a/npm/platforms/win32-x64-msvc/package.json
+++ b/npm/platforms/win32-x64-msvc/package.json
@@ -14,7 +14,8 @@
     "x64"
   ],
   "files": [
-    "tsq.exe"
+    "tsq.exe",
+    "SKILLS/**"
   ],
   "publishConfig": {
     "access": "public",
